--- a/11/tapsum2json/setup.cfg
+++ b/11/tapsum2json/setup.cfg
@@ -3,7 +3,7 @@ name = taptaptap
 version = 0.0.1
 author = bb
 author_email = idk@gmail.com
-description = Smart date converter
+description = something something
 # # # long_description = file: README.md
 # # # long_description_content_type = text/markdown
 # # # url = https://d3s.mff.cuni.cz/teaching/nswi177/labs/
