--- a/11/tapsum2json/setup.cfg
+++ b/11/tapsum2json/setup.cfg
@@ -23,6 +23,10 @@ package_dir =
 packages = find:
 python_requires = >=3.7
 zip_safe = False
+install_requires = 
+    tap.py ~= 3.1
+
+
 
 [options.packages.find]
 where = src
