adding requirements.txt

--- a/22/setup.cfg
+++ b/22/setup.cfg
@@ -2,6 +2,19 @@
 name = nswi177-jinja-templater
 author = Ben Bencik
 
+description = this is some useful package
+long_description = file: README.md
+long_description_content_type = text/markdown
+classifiers =
+    License :: OSI Approved :: MIT License
+    Operating System :: OS Independent
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+
+
 [options]
 package_dir =
     = src
@@ -11,8 +24,10 @@ zip_safe = False
 install_requires = 
     jinja ~= 2.1.1
 
+
 [options.packages.find]
 where=src
+
 
 [options.entry_points]
 console_scripts = 
