--- a/22/setup.cfg
+++ b/22/setup.cfg
@@ -22,7 +22,7 @@ packages = find:
 python_requires = >=3.7
 zip_safe = False
 install_requires = 
-    jinja ~= 2.1.1
+    jinja
 
 
 [options.packages.find]
