require jinja2 instead of jinja

--- a/22/setup.cfg
+++ b/22/setup.cfg
@@ -21,8 +21,8 @@ package_dir =
 packages = find:
 python_requires = >=3.7
 zip_safe = False
-# install_requires = 
-    # jinja
+install_requires = 
+    jinja2
 
 
 [options.packages.find]
