remove entry point

--- a/22/setup.cfg
+++ b/22/setup.cfg
@@ -29,6 +29,6 @@ install_requires =
 where=src
 
 
-[options.entry_points]
-console_scripts = 
-    nswi177-jinja-templater = main:main
+# [options.entry_points]
+# console_scripts = 
+#     nswi177-jinja-templater = main:main
