--- a/22/setup.cfg
+++ b/22/setup.cfg
@@ -32,4 +32,4 @@ where=src
 
 [options.entry_points]
 console_scripts = 
-    nswi177-jinja-templater = src.templater
+    nswi177-jinja-templater = templater
