--- a/22/setup.cfg
+++ b/22/setup.cfg
@@ -17,7 +17,7 @@ classifiers =
 
 [options]
 package_dir =
-    = src
+    = .
 packages = find:
 python_requires = >=3.7
 zip_safe = False
@@ -27,9 +27,10 @@ install_requires =
 
 
 [options.packages.find]
-where=src
+where= .
 
 
 [options.entry_points]
 console_scripts = 
-    nswi177-jinja-templater = templater
+    nswi177-jinja-templater = templater:main
+
