packing with python3

--- a/22/setup.cfg
+++ b/22/setup.cfg
@@ -1,6 +1,7 @@
 [metadata]
 name = nswi177-jinja-templater
 author = Ben Bencik
+version = 0.1.0
 
 description = this is some useful package
 long_description = file: README.md
@@ -27,10 +28,11 @@ install_requires =
 
 
 [options.packages.find]
-where = src
+where=src
 
 
 [options.entry_points]
 console_scripts = 
     nswi177-jinja-templater = templater.templater:main
 
+# need to try it with python3 333
