maybe fixed the problem with anetry points

--- a/22/setup.cfg
+++ b/22/setup.cfg
@@ -33,6 +33,6 @@ where=src
 
 [options.entry_points]
 console_scripts = 
-    nswi177-jinja-templater = templater.templater:main
+    nswi177-jinja-templater = templater.templater:enrty_point
 
 # need to try it with python3 333
